# LRT_floating_base_model

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/centroidal_model/: CentroidalModel.hpp  CentroidalModelDynamics.hpp  CentroidalModelParams.hpp  MultiEndEffectorKinematics.hpp
include/centroidal_model/implementation/: CentroidalGetters.hpp
include/floating_base_model/: AccessHelperFunctions.hpp  AccessHelperFunctions.hxx  FactoryFunctions.hpp  FloatingBaseGetters.hpp  FloatingBaseHelpers.hpp  FloatingBaseModelDynamics.hpp  FloatingBaseModelInfo.hpp  FloatingBaseModelParams.hpp  FloatingBaseModelPinocchioMapping.hpp  ModelHelperFunctions.hpp  PinocchioFloatingBaseDynamics.hpp  PinocchioFloatingBaseDynamicsAD.hpp  QuaterionEulerTransforms.hpp  QuaterionTransforms.hpp
include/floating_base_model/implementation/: AccessHelperFunctions.hxx  FloatingBaseGettersImpl.hpp  FloatingBaseHelpersImpl.hpp  ModelHelperFunctions.hxx
include/floating_base_model/path_management/: package_path.h  package_path.h.in
src/: CentroidalModel.cpp  CentroidalModelDynamics.cpp  CentroidalModelParams.cpp  FactoryFunctions.cpp  FloatingBaseModelDynamics.cpp  FloatingBaseModelInfo.cpp  FloatingBaseModelParams.cpp  FloatingBaseModelPinocchioMapping.cpp  ModelHelperFunctions.cpp  MultiEndEffectorKinematics.cpp  PinocchioFloatingBaseDynamics.cpp  PinocchioFloatingBaseDynamicsAD.cpp  QuaterionEulerTransforms.cpp  main.cpp
test/: AccessHelperFunctionsTest.cpp  FactoryFunctionsTest.cpp  FloatingBaseModelPinocchioMappingTest.cpp  ModelHelperFunctionsTest.cpp  PinocchioFloatingBaseDynamicsTest.cpp  QuaterionEulerTransformsTest.cpp
test/include/: definitions.h
test/test_models/: meldog_base_link.urdf  meldog_no_base_link.urdf
